--- a/project.html
+++ b/project.html
@@ -677,7 +677,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-4.html"
+                          href="maiaResortQuyNhon2.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -720,7 +720,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-4.html"
+                            <a href="maiaResortQuyNhon2.html"
                               >Maia Resort<br class="hide-from-sm" />
                               Quy Nhon</a
                             >
