--- a/nagoya_shushi.html
+++ b/nagoya_shushi.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>PriveTrip| Alpha Creative Digital Agency</title>
+    <title>Maia Resort Quy Nhon | Alpha Creative Digital Agency</title>
 
     <!-- Meta -->
     <meta charset="utf-8" />
@@ -377,10 +377,7 @@
 							============================= -->
               <div class="ph-image">
                 <div class="ph-image-inner">
-                  <img
-                    src="assets/img/resortPhuQuoc/bannerResortPhuQuoc.jpg"
-                    alt="Image"
-                  />
+                  <img src="assets/img/banner-2-scaled.jpg" alt="Image" />
                 </div>
               </div>
               <!-- End page header image -->
@@ -393,7 +390,8 @@
                 <div class="ph-categories ph-appear"></div>
 
                 <h2 class="ph-caption-title ph-appear custom-title-detail">
-                  Fusion Resort Phu Quoc
+                  Nagoya
+                  <p>Shushi</p>
                 </h2>
                 <!-- You can use <br class="hide-from-lg"> to break a text line if needed -->
               </div>
@@ -408,7 +406,7 @@
                 <ul>
                   <li>
                     <div class="pi-list-heading">Client</div>
-                    <div class="pi-list-cont">Fusion Resort Phu Quoc</div>
+                    <div class="pi-list-cont">Maia Resort Quy Nhon</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Specialism</div>
@@ -557,12 +555,12 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-80 mb-80">
-                <div class="col-md-4 mt-30">
+              <div class="row mt-20">
+                <div class="col-md-6 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy anim-image-parallax tt-lazy"
-                    src=""
+                    class="cover img-fluid medium-zoom-image"
+                    src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
                 </div> -->
@@ -570,17 +568,16 @@
                     class="tt-heading tt-heading-xsm margin-bottom-60 anim-fadeinup"
                   >
                     <h2 class="tt-heading-title">
-                      Beautiful & untouched
-                      <p>Quy Nhon</p>
+                      Beautiful & untouched Quy Nhon
                     </h2>
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-8 mt-30">
+                <div class="col-md-6 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
-                    src=""
+                    class="cover img-fluid medium-zoom-image"
+                    src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
                 </div> -->
@@ -600,26 +597,12 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="row mt-20">
-                <div class="col-md-12 mt-30">
-                  <div class="img-detail-work cursorZoom">
-                    <div class="vimeo-wrapper" style="position: relative">
-                      <iframe
-                        src="https://player.vimeo.com/video/519791501?background=1&autoplay=1&loop=1&title=0&byline=0&portrait=0"
-                        frameborder="0"
-                        allow="autoplay; fullscreen; picture-in-picture"
-                        allowfullscreen
-                      ></iframe>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
               <div class="row mt-20">
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_1.jpeg"
+                      class="cover img-fluid medium-zoom-image"
+                      src="./assets/img/Nagoya Sushi/nagoya_1.jpeg"
                       alt=""
                     />
                   </div>
@@ -630,7 +613,7 @@
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_2.jpeg"
+                      src="./assets/img/Nagoya Sushi/nagoya_2.jpeg"
                       alt=""
                     />
                   </div>
@@ -641,7 +624,7 @@
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_3.jpeg"
+                      src="./assets/img/Nagoya Sushi/nagoya_3.jpeg"
                       alt=""
                     />
                   </div>
@@ -652,7 +635,47 @@
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_4.jpeg"
+                      src="./assets/img/Nagoya Sushi/nagoya_4.jpeg"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-30">
+                <div class="col-md-6 mt-30">
+                  <div class="img-detail-work cursorZoom">
+                    <img
+                      class="cover img-fluid medium-zoom-image"
+                      src="./assets/img/Nagoya Sushi/nagoya_5a.jpeg"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6 mt-30">
+                  <div class="img-detail-work cursorZoom">
+                    <img
+                      class="cover img-fluid medium-zoom-image"
+                      src="./assets/img/Nagoya Sushi/nagoya_5b.jpeg"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-30">
+                <div class="col-md-6 mt-30">
+                  <div class="img-detail-work cursorZoom">
+                    <img
+                      class="cover img-fluid medium-zoom-image"
+                      src="./assets/img/Nagoya Sushi/nagoya_6a.jpeg"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6 mt-30">
+                  <div class="img-detail-work cursorZoom">
+                    <img
+                      class="cover img-fluid medium-zoom-image"
+                      src="./assets/img/Nagoya Sushi/nagoya_6b.jpeg"
                       alt=""
                     />
                   </div>
@@ -663,121 +686,7 @@
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_5.jpeg"
-                      alt=""
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-20">
-                <div class="col-md-12 mt-30">
-                  <div class="img-detail-work cursorZoom">
-                    <img
-                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
-                      src="./assets/img/Fusion Phu Quoc/image/fusion_phuquoc_6.jpeg"
-                      alt=""
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-20">
-                <div class="col-md-12 mt-30">
-                  <div
-                  id="carouselExampleControls"
-                  class="carousel slide carousel-fade"
-                  data-bs-ride="carousel"
-                >
-                  <div class="carousel-indicators">
-                    <button
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide-to="0"
-                      class="active"
-                      aria-current="true"
-                      aria-label="Slide 1"
-                    ></button>
-                    <button
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide-to="1"
-                      aria-label="Slide 2"
-                    ></button>
-                    <button
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide-to="2"
-                      aria-label="Slide 3"
-                    ></button>
-                    <button
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide-to="3"
-                      aria-label="Slide 3"
-                    ></button>
-                  </div>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img
-                        src="./assets/img/Maia Quy Nhon_Branding/carousel 1/brand_maia_c1.1.jpeg"
-                        class="d-block w-100"
-                        alt="..."
-                      />
-                    </div>
-                    <div class="carousel-item">
-                      <img
-                        src="./assets/img/Maia Quy Nhon_Branding/carousel 1/brand_maia_c1.2.jpeg"
-                        class="d-block w-100"
-                        alt="..."
-                      />
-                    </div>
-                    <div class="carousel-item">
-                      <img
-                        src="./assets/img/Maia Quy Nhon_Branding/carousel 1/brand_maia_c1.3.jpeg"
-                        class="d-block w-100"
-                        alt="..."
-                      />
-                    </div>
-                    <div class="carousel-item">
-                      <img
-                        src="./assets/img/Maia Quy Nhon_Branding/carousel 1/brand_maia_c1.4.jpeg"
-                        class="d-block w-100"
-                        alt="..."
-                      />
-                    </div>
-                  </div>
-                  <!-- <button
-                  class="carousel-control-prev"
-                  type="button"
-                  data-bs-target="#carouselExampleControls"
-                  data-bs-slide="prev"
-                >
-                  <span
-                    class="carousel-control-prev-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button
-                  class="carousel-control-next"
-                  type="button"
-                  data-bs-target="#carouselExampleControls"
-                  data-bs-slide="next"
-                >
-                  <span
-                    class="carousel-control-next-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Next</span>
-                </button> -->
-                </div>
-                </div>
-              </div>
-              <div class="row mt-20">
-                <div class="col-md-12 mt-30">
-                  <div class="img-detail-work cursorZoom">
-                    <img
-                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
-                      src="assets/img/Fusion Phu Quoc/image/fusion_phuquoc_7.jpeg"
+                      src="./assets/img/Nagoya Sushi/nagoya_7.jpeg"
                       alt=""
                     />
                   </div>
@@ -792,11 +701,11 @@
 								-->
                   <div class="tt-page-nav tt-pn-scroll">
                     <a
-                      href="maiaResortQuyNhon2.html"
+                      href="nestbyaia.html"
                       class="tt-pn-link anim-fadeinup"
                     >
                       <div class="tt-pn-title">Next Project</div>
-                      <div class="tt-pn-hover-title">Maia Resort Quy Nhon</div>
+                      <div class="tt-pn-hover-title">Nest By Aia</div>
                     </a>
                     <!-- /.tt-pn-link -->
 
@@ -809,7 +718,7 @@
                         loop
                         muted
                         preload="metadata"
-                        poster="assets/img/Sewing-the-fishing-net.jpg"
+                        poster="assets/img/Nest-by-AIA-03-1-scaled.jpg"
                       >
                         <!-- <source
                           src="assets/vids/fashion-week.mp4"
@@ -820,12 +729,6 @@
                           type="video/webm"
                         /> -->
                       </video>
-                      <!-- <iframe
-                        src="https://player.vimeo.com/video/473706840?background=1&autoplay=1&loop=1&byline=0&title=0"
-                        frameborder="0"
-                        allowfullscreen
-                        class="tt-pn-video"
-                      ></iframe> -->
                     </div>
                   </div>
                   <!-- End page nav -->
