--- a/fusion_saigon.html
+++ b/fusion_saigon.html
@@ -560,11 +560,11 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-20">
-                <div class="col-md-6 mt-30">
+              <div class="row mt-80 mb-80">
+                <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -578,10 +578,10 @@
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-6 mt-30">
+                <div class="col-md-8 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -710,7 +710,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/fusion original/image/fusion-02-scaled.jpeg"
                       alt=""
                     />
@@ -719,7 +719,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/fusion original/image/fusion-03-scaled.jpeg"
                       alt=""
                     />
@@ -755,7 +755,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/fusion original/image/fusion-05.jpeg"
                       alt=""
                     />
@@ -803,7 +803,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/fusion original/image/fusion-07-scaled.jpeg"
                       alt=""
                     />
@@ -844,7 +844,10 @@
 								* Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
 								-->
                   <div class="tt-page-nav tt-pn-scroll">
-                    <a href="indochine_palace_branding.html" class="tt-pn-link anim-fadeinup">
+                    <a
+                      href="indochine_palace_branding.html"
+                      class="tt-pn-link anim-fadeinup"
+                    >
                       <div class="tt-pn-title">Next Project</div>
                       <div class="tt-pn-hover-title">Indochine Palace</div>
                     </a>
