--- a/indochine_palace_branding.html
+++ b/indochine_palace_branding.html
@@ -409,7 +409,7 @@
                 <ul>
                   <li>
                     <div class="pi-list-heading">Client</div>
-                    <div class="pi-list-cont">Maia Resort Quy Nhon</div>
+                    <div class="pi-list-cont">Indochine Palace</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Specialism</div>
@@ -417,7 +417,7 @@
                   </li>
                   <li>
                     <div class="pi-list-heading">Deliverables</div>
-                    <div class="pi-list-cont">Website Development</div>
+                    <div class="pi-list-cont">Marketing Collateralt</div>
                     <!-- Describe in a few words -->
                   </li>
                   <!-- <li>
@@ -558,11 +558,11 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-20">
-                <div class="col-md-6 mt-30">
+              <div class="row mt-80 mb-80">
+                <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -576,10 +576,10 @@
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-6 mt-30">
+                <div class="col-md-8 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -696,7 +696,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_1.jpeg"
                       alt=""
                     />
@@ -707,7 +707,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_2.jpeg"
                       alt=""
                     />
@@ -718,7 +718,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_3.jpeg"
                       alt=""
                     />
@@ -729,7 +729,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_4.jpeg"
                       alt=""
                     />
@@ -740,7 +740,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_5.jpeg"
                       alt=""
                     />
@@ -751,7 +751,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_6.jpeg"
                       alt=""
                     />
@@ -762,7 +762,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_7.jpeg"
                       alt=""
                     />
@@ -773,7 +773,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="assets/img/Indochine_Marketing Collateral/image/Indochine_8.jpeg"
                       alt=""
                     />
