--- a/nagoya_shushi.html
+++ b/nagoya_shushi.html
@@ -406,15 +406,15 @@
                 <ul>
                   <li>
                     <div class="pi-list-heading">Client</div>
-                    <div class="pi-list-cont">Maia Resort Quy Nhon</div>
+                    <div class="pi-list-cont">Nagoya Sushi</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Specialism</div>
-                    <div class="pi-list-cont">Hospitality</div>
+                    <div class="pi-list-cont">Food & Beverage</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Deliverables</div>
-                    <div class="pi-list-cont">Website Development</div>
+                    <div class="pi-list-cont">Brand Identity</div>
                     <!-- Describe in a few words -->
                   </li>
                   <!-- <li>
@@ -555,11 +555,11 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-20">
-                <div class="col-md-6 mt-30">
+              <div class="row mt-80 mb-80">
+                <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -568,15 +568,16 @@
                     class="tt-heading tt-heading-xsm margin-bottom-60 anim-fadeinup"
                   >
                     <h2 class="tt-heading-title">
-                      Beautiful & untouched Quy Nhon
+                      Beautiful & untouched
+                      <p>Quy Nhon</p>
                     </h2>
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-6 mt-30">
+                <div class="col-md-8 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -601,7 +602,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_1.jpeg"
                       alt=""
                     />
@@ -612,7 +613,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_2.jpeg"
                       alt=""
                     />
@@ -623,7 +624,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_3.jpeg"
                       alt=""
                     />
@@ -634,7 +635,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_4.jpeg"
                       alt=""
                     />
@@ -645,7 +646,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_5a.jpeg"
                       alt=""
                     />
@@ -654,7 +655,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_5b.jpeg"
                       alt=""
                     />
@@ -665,7 +666,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_6a.jpeg"
                       alt=""
                     />
@@ -674,7 +675,7 @@
                 <div class="col-md-6 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_6b.jpeg"
                       alt=""
                     />
@@ -685,7 +686,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_7.jpeg"
                       alt=""
                     />
@@ -700,10 +701,7 @@
 								* Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
 								-->
                   <div class="tt-page-nav tt-pn-scroll">
-                    <a
-                      href="nestbyaia.html"
-                      class="tt-pn-link anim-fadeinup"
-                    >
+                    <a href="nestbyaia.html" class="tt-pn-link anim-fadeinup">
                       <div class="tt-pn-title">Next Project</div>
                       <div class="tt-pn-hover-title">Nest By Aia</div>
                     </a>
