--- a/privetrip.html
+++ b/privetrip.html
@@ -554,8 +554,8 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-20">
-                <div class="col-md-6 mt-30">
+              <div class="row mt-80 mb-80">
+                <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
                     class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
@@ -572,7 +572,7 @@
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-6 mt-30">
+                <div class="col-md-8 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
                     class="cover img-fluid medium-zoom-image"
