--- a/project.html
+++ b/project.html
@@ -748,7 +748,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-5.html"
+                          href="indochine_palace.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -791,7 +791,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-5.html"
+                            <a href="indochine_palace.html"
                               >Indochine<br class="hide-from-sm" />
                               Palace</a
                             >
@@ -819,7 +819,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-6.html"
+                          href="fusion_saigon.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -864,7 +864,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-6.html"
+                            <a href="fusion_saigon.html"
                               >Fusion Original<br class="hide-from-sm" />
                               Saigon Centre</a
                             >
@@ -892,7 +892,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-7.html"
+                          href="indochine_palace_branding.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -937,7 +937,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-7.html"
+                            <a href="indochine_palace_branding.html"
                               >Indochine<br class="hide-from-sm" />
                               Palace</a
                             >
@@ -965,7 +965,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-8.html"
+                          href="nagoya_shushi.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -1008,7 +1008,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-8.html"
+                            <a href="nagoya_shushi.html"
                               >Nagoya<br class="hide-from-sm" />
                               Sushi</a
                             >
@@ -1036,7 +1036,7 @@
                     <div class="pli-inner">
                       <div class="pli-image-col">
                         <a
-                          href="single-project-9.html"
+                          href="nestbyaia.html"
                           class="pli-image-link"
                           data-cursor="View<br>Project"
                         >
@@ -1081,7 +1081,7 @@
                         <div class="pli-info">
                           <!-- <div class="pli-counter"></div> -->
                           <h2 class="pli-title">
-                            <a href="single-project-9.html"
+                            <a href="nestbyaia.html"
                               >Nest By<br class="hide-from-sm" />
                               Aia</a
                             >
