--- a/indochine_palace.html
+++ b/indochine_palace.html
@@ -393,8 +393,8 @@
                 <div class="ph-categories ph-appear"></div>
 
                 <h2 class="ph-caption-title ph-appear custom-title-detail">
-                  Maia Resort
-                  <p>Quy Nhon</p>
+                  Indochine
+                  <p>Palace</p>
                 </h2>
                 <!-- You can use <br class="hide-from-lg"> to break a text line if needed -->
               </div>
@@ -409,7 +409,7 @@
                 <ul>
                   <li>
                     <div class="pi-list-heading">Client</div>
-                    <div class="pi-list-cont">Maia Resort Quy Nhon</div>
+                    <div class="pi-list-cont">Indochine Palace</div>
                   </li>
                   <li>
                     <div class="pi-list-heading">Specialism</div>
@@ -417,7 +417,7 @@
                   </li>
                   <li>
                     <div class="pi-list-heading">Deliverables</div>
-                    <div class="pi-list-cont">Website Development</div>
+                    <div class="pi-list-cont">Photography</div>
                     <!-- Describe in a few words -->
                   </li>
                   <!-- <li>
@@ -558,11 +558,11 @@
 					************************************** -->
           <div id="page-content" class="detail-work">
             <div class="container">
-              <div class="row mt-20">
-                <div class="col-md-6 mt-30">
+              <div class="row mt-80 mb-80">
+                <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -576,10 +576,10 @@
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
                 </div>
-                <div class="col-md-6 mt-30">
+                <div class="col-md-8 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
                   <img
-                    class="cover img-fluid medium-zoom-image"
+                    class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                     src="./assets/img/Indochine Palace/image"
                     alt=""
                   />
@@ -604,7 +604,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indoche_1.jpeg"
                       alt=""
                     />
@@ -615,7 +615,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_2.jpeg"
                       alt=""
                     />
@@ -705,7 +705,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_3.jpeg"
                       alt=""
                     />
@@ -795,7 +795,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_4.jpeg"
                       alt=""
                     />
@@ -898,7 +898,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_5.jpeg"
                       alt=""
                     />
@@ -1001,7 +1001,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_6.jpeg"
                       alt=""
                     />
@@ -1012,7 +1012,7 @@
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <img
-                      class="cover img-fluid medium-zoom-image"
+                      class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Indochine Palace/image/indochine_7.jpeg"
                       alt=""
                     />
