--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 													-->
                           <div class="portfolio-grid-item anim-parallax">
                             <a
-                              href="single-project-2.html"
+                              href="fusion_saigon.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -569,7 +569,7 @@
 													-->
                           <div class="portfolio-grid-item">
                             <a
-                              href="single-project-3.html"
+                              href="resortphuquoc.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -647,7 +647,7 @@
 													-->
                           <div class="portfolio-grid-item">
                             <a
-                              href="single-project-4.html"
+                              href="nestbyaia.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -699,7 +699,7 @@
 													-->
                           <div class="portfolio-grid-item">
                             <a
-                              href="single-project-3.html"
+                              href="nagoya_shushi.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -764,7 +764,7 @@
 													-->
                           <div class="portfolio-grid-item">
                             <a
-                              href="single-project-3.html"
+                              href="privetrip.html"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
