--- a/nagoya_shushi.html
+++ b/nagoya_shushi.html
@@ -673,7 +673,10 @@
                   </div>
                 </div>
                 <div class="col-md-6 mt-30">
-                  <div class="img-detail-work cursorZoom">
+                  <div
+                    class="img-detail-work cursorZoom"
+                    style="height: 100% !important"
+                  >
                     <img
                       class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
                       src="./assets/img/Nagoya Sushi/nagoya_6b.jpeg"
@@ -693,7 +696,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tt-section padding-bottom-xlg-100">
+              <div class="tt-section padding-top-xlg-150">
                 <div class="tt-section-inner tt-wrap">
                   <!-- Begin page nav 
 								==================== 
