--- a/maiaResortQuyNhon2.html
+++ b/maiaResortQuyNhon2.html
@@ -571,7 +571,8 @@
                     class="tt-heading tt-heading-xsm margin-bottom-60 anim-fadeinup"
                   >
                     <h2 class="tt-heading-title">
-                      Beautiful & untouched Quy Nhon
+                      Beautiful & untouched
+                      <p>Quy Nhon</p>
                     </h2>
                     <!-- <h3 class="tt-heading-subtitle text-gray">Subtitle</h3> -->
                   </div>
@@ -885,7 +886,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tt-section padding-bottom-xlg-100">
+              <div class="tt-section padding-top-xlg-150">
                 <div class="tt-section-inner tt-wrap">
                   <!-- Begin page nav 
 								==================== 
