--- a/resortphuquoc.html
+++ b/resortphuquoc.html
@@ -783,7 +783,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tt-section padding-bottom-xlg-100">
+              <div class="tt-section padding-top-xlg-150">
                 <div class="tt-section-inner tt-wrap">
                   <!-- Begin page nav 
 								==================== 
