--- a/maiaResortQuyNhon2.html
+++ b/maiaResortQuyNhon2.html
@@ -886,7 +886,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tt-section padding-top-xlg-200 padding-bottom-xlg-200">
+              <div class="tt-section padding-top-xlg-200">
                 <div class="tt-section-inner tt-wrap">
                   <!-- Begin page nav 
 								==================== 
