--- a/index.html
+++ b/index.html
@@ -222,21 +222,11 @@
 												==================================== -->
                         <li class="tt-ol-submenu-wrap">
                           <div class="tt-ol-submenu-trigger">
-                            <a href="#">About</a>
-                            <div class="tt-ol-submenu-caret-wrap">
-                              <div
-                                class="tt-ol-submenu-caret magnetic-item"
-                              ></div>
-                            </div>
+                            <a href="./about.html">About</a>
+                            <div class="tt-ol-submenu-caret-wrap"></div>
                             <!-- /.tt-ol-submenu-caret-wrap -->
                           </div>
                           <!-- /.tt-ol-submenu-trigger -->
-                          <div class="tt-ol-submenu">
-                            <ul class="tt-ol-submenu-list">
-                              <li><a href="about-us.html">About Us</a></li>
-                            </ul>
-                            <!-- /.tt-ol-submenu-list -->
-                          </div>
                           <!-- /.tt-ol-submenu -->
                         </li>
                         <!-- End submenu (sub-master) -->
@@ -245,53 +235,12 @@
 												==================================== -->
                         <li class="tt-ol-submenu-wrap">
                           <div class="tt-ol-submenu-trigger">
-                            <a href="#">Blog</a>
-                            <div class="tt-ol-submenu-caret-wrap">
-                              <div
-                                class="tt-ol-submenu-caret magnetic-item"
-                              ></div>
-                            </div>
+                            <a href="blog.html">Blog</a>
+                            <div class="tt-ol-submenu-caret-wrap"></div>
                             <!-- /.tt-ol-submenu-caret-wrap -->
                           </div>
                           <!-- /.tt-ol-submenu-trigger -->
-                          <div class="tt-ol-submenu">
-                            <ul class="tt-ol-submenu-list">
-                              <!-- Begin submenu
-															=================== -->
-                              <li class="tt-ol-submenu-wrap">
-                                <div class="tt-ol-submenu-trigger">
-                                  <a href="#" class="tt-ol-submenu-link"
-                                    >Blog List</a
-                                  >
-                                  <div class="tt-ol-submenu-caret-wrap">
-                                    <div
-                                      class="tt-ol-submenu-caret magnetic-item"
-                                    ></div>
-                                  </div>
-                                  <!-- /.tt-ol-submenu-caret-wrap -->
-                                </div>
-                                <!-- /.tt-ol-submenu-trigger -->
-                                <div class="tt-ol-submenu">
-                                  <ul class="tt-ol-submenu-list">
-                                    <li>
-                                      <a href="blog-interactive.html"
-                                        >Interactive List</a
-                                      >
-                                    </li>
-                                  </ul>
-                                  <!-- /.tt-ol-submenu-list -->
-                                </div>
-                                <!-- /.tt-ol-submenu -->
-                              </li>
-                              <!-- End submenu -->
 
-                              <!-- Begin submenu
-															=================== -->
-
-                              <!-- End submenu -->
-                            </ul>
-                            <!-- /.tt-ol-submenu-list -->
-                          </div>
                           <!-- /.tt-ol-submenu -->
                         </li>
                         <!-- End submenu (sub-master) -->
