--- a/fusion_saigon.html
+++ b/fusion_saigon.html
@@ -370,12 +370,12 @@
 					-->
           <div
             id="page-header"
-            class="ph-full ph-inline ph-bg-image ph-image-shadow ph-image-cover-5 ph-content-parallax"
+            class="ph-full ph-inline ph-bg-image  ph-content-parallax"
           >
             <div class="page-header-inner tt-wrap">
               <!-- Begin page header image 
 							============================= -->
-              <div class="ph-image">
+              <div class="ph-image ph-image-shadow ph-image-cover-5">
                 <div class="ph-image-inner">
                   <img
                     src="assets/img/Fusion-Original-Saigon-Centre-Two-Bedroom-Living-Room-II.jpg"
@@ -604,6 +604,11 @@
                 </div>
               </div>
               <div class="row mt-20">
+                <a
+                href="project_detail.html"
+                class="pgi-image-wrap"
+                data-cursor="View<br>Project"
+               >
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
                     <div class="vimeo-wrapper" style="position: relative">
