--- a/nestbyaia.html
+++ b/nestbyaia.html
@@ -370,12 +370,12 @@
 					-->
           <div
             id="page-header"
-            class="ph-full ph-inline ph-bg-image ph-image-shadow ph-image-cover-5 ph-content-parallax"
+            class="ph-full ph-inline ph-bg-image ph-content-parallax"
           >
             <div class="page-header-inner tt-wrap">
               <!-- Begin page header image 
 							============================= -->
-              <div class="ph-image">
+              <div class="ph-image ph-image-shadow ph-image-cover-5">
                 <div class="ph-image-inner">
                   <img
                     src="assets/img/Nest By AIA/AIA_banner_detail.jpeg"
@@ -604,6 +604,11 @@
               </div>
               <div class="row mt-20">
                 <div class="col-md-12 mt-30">
+                  <a
+                  href="project_detail.html"
+                  class="pgi-image-wrap"
+                  data-cursor="View<br>Project"
+                 >
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
