--- a/project_detail.html
+++ b/project_detail.html
@@ -370,12 +370,12 @@
 					-->
           <div
             id="page-header"
-            class="ph-full ph-inline ph-bg-image ph-image-shadow ph-image-cover-5 ph-content-parallax"
+            class="ph-full ph-inline ph-bg-image  ph-content-parallax"
           >
             <div class="page-header-inner tt-wrap">
               <!-- Begin page header image 
 							============================= -->
-              <div class="ph-image">
+              <div class="ph-image ph-image-shadow ph-image-cover-5">
                 <div class="ph-image-inner">
                   <img src="assets/img/maria_quynhon.jpg" alt="Image" />
                 </div>
