--- a/blog.html
+++ b/blog.html
@@ -113,17 +113,14 @@
       <div id="page-transition">
         <div class="ptr-overlay"></div>
         <div class="ptr-preloader">
-          <div class="ptr-prel-content">
-            <!-- Hint: You may need to change the img height and opacity to match your logo type. You can do this from the "theme.css" file (find: ".ptr-prel-image"). -->
-            <img
-              src="./assets/img/AlphaCreative_Logo_white.svg"
-              class="ptr-prel-image tt-logo-light"
-              alt="Logo"
-              width="200"
-              height="200"
-            />
+          <div class="preloader">
           </div>
-          <!-- /.ptr-prel-content -->
+          <div class="block-1"></div>
+          <div class="block-2"></div>
+          <div class="logo-load">
+            <img src="./assets/img/logosymbol.svg" alt="" style="width: 44px !important;height: 44px !important;max-width: 44px !important;">
+        </div>
+        <div class="logo-load spinning"></div>
         </div>
         <!-- /.ptr-preloader -->
       </div>
