--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
     <link rel="stylesheet" href="./assets/css/theme.css" />
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/custom.css" />
+    <!-- custom css -->
+    <link rel="stylesheet" href="./assets/css/custom1.css" />
+
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <body
     id="body"
@@ -100,19 +111,22 @@
       <div id="page-transition">
         <div class="ptr-overlay"></div>
         <div class="ptr-preloader">
-          <div class="ptr-prel-content">
-            <!-- Hint: You may need to change the img height and opacity to match your logo type. You can do this from the "theme.css" file (find: ".ptr-prel-image"). -->
+          <!-- <div class="preloader"></div>
+          <div class="block-1"></div>
+          <div class="block-2"></div> -->
+          <div class="logo-load">
             <img
-              src="./assets/img/AlphaCreative_Logo_white.svg"
-              class="ptr-prel-image tt-logo-light"
-              alt="Logo"
-              width="200"
-              height="200"
+              src="./assets/img/logosymbol.svg"
+              alt=""
+              style="
+                width: 44px !important;
+                height: 44px !important;
+                max-width: 44px !important;
+              "
             />
           </div>
-          <!-- /.ptr-prel-content -->
+          <div class="logo-load spinning"></div>
         </div>
-        <!-- /.ptr-preloader -->
       </div>
       <!-- End page transition -->
 
