--- a/contact.html
+++ b/contact.html
@@ -317,6 +317,7 @@
                 ============================= -->
                 <div class="ph-image">
                   <div class="ph-image-inner">
+                    <img src="assets/img/contact.png" alt="Image">
                     <!-- <img src="" alt=""> -->
                   </div>
                 </div>
@@ -402,17 +403,18 @@
                       <!-- Begin contact info 
                       ======================== -->
                       <ul class="tt-contact-info padding-bottom-40 text-gray">
-                        <li class="anim-fadeinup">
+                        <li class="anim-fadeinup custom-noelement">
                           <span class="tt-ci-icon"><i class="fas fa-map-marker-alt"></i></span>
-                          121 King Street, Melbourne, Australia
+                          2F, 6 Vo Van Kiet Street
+                          District One, HCMC
                         </li>
                         <li class="anim-fadeinup">
                           <span class="tt-ci-icon"><i class="fas fa-phone"></i></span>
-                          <a href="tel:+123456789000" class="tt-link">+(123) 456 789 000</a>
+                          <a href="tel:+123456789000" class="tt-link">+84 28 6682 9902</a>
                         </li>
                         <li class="anim-fadeinup">
                           <span class="tt-ci-icon"><i class="fas fa-envelope"></i></span>
-                          <a href="mailto:company@email.com" class="tt-link">company@email.com</a>
+                          <a href="mailto:company@email.com" class="tt-link">hello@alphacreative.vn</a>
                         </li>
                         <li class="anim-fadeinup">
                           <h6 class="no-margin-bottom margin-top-40">Follow:</h6>
@@ -519,16 +521,16 @@
                   * Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
                   -->
                   <div class="tt-page-nav tt-pn-scroll">
-                    <a href="portfolio-grid-modern.html" class="tt-pn-link anim-fadeinup">
-                      <div class="tt-pn-title">Portfolio</div>
-                      <div class="tt-pn-hover-title">Portfolio</div>
+                    <a href="project.html" class="tt-pn-link anim-fadeinup">
+                      <div class="tt-pn-title">Project</div>
+                      <div class="tt-pn-hover-title">Project</div>
                     </a> <!-- /.tt-pn-link -->
   
                     <div class="tt-pn-subtitle anim-fadeinup">Selected Works</div>
   
                     <!-- Use if destination page contains page header image -->
                     <div class="tt-pn-image">
-                      <img src="assets/img/page-header/ph-1.jpg" alt="image">
+                      <img src="assets/img/maria_quynhon.jpg" alt="image">
                     </div>
                   </div>
                   <!-- End page nav -->
