--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
                 ============================= -->
                 <div class="ph-image">
                   <div class="ph-image-inner">
-                    <img src="assets/img/contact.png" alt="Image">
+                    <img src="assets/img/contact (1).png" alt="Image" class="image">
                     <!-- <img src="" alt=""> -->
                   </div>
                 </div>
