--- a/blog-post.html
+++ b/blog-post.html
@@ -315,7 +315,7 @@
               <div class="ph-image">
                 <div class="ph-image-inner">
                   <img
-                    src="assets/img/page-header/blog-ph/blog-ph-1.jpg"
+                    src="assets/img/Showcase_PriveTrip_00.jpg"
                     alt="Image"
                   />
                 </div>
@@ -340,14 +340,6 @@
 
                 <div class="ph-meta ph-appear">
                   <span class="ph-meta-published">May 26, 2021</span>
-                  <span class="ph-meta-posted-by"
-                    >by:
-                    <a
-                      href="blog-archive.html"
-                      title="View all posts by John Doe"
-                      >John Doe</a
-                    ></span
-                  >
                 </div>
                 <!-- /.ph-meta -->
               </div>
@@ -513,15 +505,6 @@
                           alt="image"
                         />
                       </a>
-                      <figcaption class="tt-bpi-caption">
-                        Photo by
-                        <a
-                          href="http://unsplash.com/"
-                          target="_blank"
-                          rel="noopener"
-                          >Unsplash</a
-                        >
-                      </figcaption>
                     </figure>
                     <!-- End post image -->
 
@@ -957,11 +940,11 @@
 								-->
                 <div class="tt-page-nav tt-pn-scroll">
                   <a
-                    href="portfolio-grid-modern.html"
+                    href="project.html"
                     class="tt-pn-link anim-fadeinup"
                   >
-                    <div class="tt-pn-title">Portfolio</div>
-                    <div class="tt-pn-hover-title">Portfolio</div>
+                    <div class="tt-pn-title">Project</div>
+                    <div class="tt-pn-hover-title">Project</div>
                   </a>
                   <!-- /.tt-pn-link -->
 
@@ -969,7 +952,7 @@
 
                   <!-- Use if destination page contains page header image -->
                   <div class="tt-pn-image">
-                    <img src="assets/img/page-header/ph-1.jpg" alt="image" />
+                    <img src="assets/img/maria_quynhon.jpg" alt="image" />
                   </div>
                 </div>
                 <!-- End page nav -->
