--- a/blog.html
+++ b/blog.html
@@ -400,7 +400,6 @@
                       <h2 class="bi-item-title"><a href="blog-post.html">5 Surprising Techniques to Improve Your Creativity</a></h2>
                       <div class="bi-item-meta"> 
                         <span class="published">May 26, 2021</span>
-                        <span class="posted-by">- by <a href="blog-archive.html" title="View all posts by John Doe">John Doe</a></span>
                       </div>
                     </article>
                     <!-- End blog interactive item -->
@@ -418,7 +417,6 @@
                       <h2 class="bi-item-title"><a href="blog-post.html">Avoid the Top 10 Mistakes Made by Beginners</a></h2>
                       <div class="bi-item-meta"> 
                         <span class="published">May 26, 2021</span>
-                        <span class="posted-by">- by <a href="blog-archive.html" title="View all posts by John Doe">John Doe</a></span>
                       </div>
                     </article>
                     <!-- End blog interactive item -->
@@ -436,7 +434,6 @@
                       <h2 class="bi-item-title"><a href="blog-post.html">Why Some People Almost Always Save Money With This Method</a></h2>
                       <div class="bi-item-meta"> 
                         <span class="published">May 26, 2021</span>
-                        <span class="posted-by">- by <a href="blog-archive.html" title="View all posts by John Doe">John Doe</a></span>
                       </div>
                     </article>
                     <!-- End blog interactive item -->
@@ -454,7 +451,6 @@
                       <h2 class="bi-item-title"><a href="blog-post.html">Want to Step Up Your Skills? You Need to Read This First</a></h2>
                       <div class="bi-item-meta"> 
                         <span class="published">May 26, 2021</span>
-                        <span class="posted-by">- by <a href="blog-archive.html" title="View all posts by John Doe">John Doe</a></span>
                       </div>
                     </article>
                     <!-- End blog interactive item -->
@@ -472,7 +468,6 @@
                       <h2 class="bi-item-title"><a href="blog-post.html">Secrets to Getting Your Project to Complete Quickly and Efficiently</a></h2>
                       <div class="bi-item-meta"> 
                         <span class="published">May 26, 2021</span>
-                        <span class="posted-by">- by <a href="blog-archive.html" title="View all posts by John Doe">John Doe</a></span>
                       </div>
                     </article>
                     <!-- End blog interactive item -->
@@ -655,16 +650,16 @@
                   * Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
                   -->
                   <div class="tt-page-nav tt-pn-scroll">
-                    <a href="portfolio-grid-modern.html" class="tt-pn-link anim-fadeinup">
-                      <div class="tt-pn-title">Portfolio</div>
-                      <div class="tt-pn-hover-title">Portfolio</div>
+                    <a href="project.html" class="tt-pn-link anim-fadeinup">
+                      <div class="tt-pn-title">Project</div>
+                      <div class="tt-pn-hover-title">Project</div>
                     </a> <!-- /.tt-pn-link -->
   
                     <div class="tt-pn-subtitle anim-fadeinup">Selected Works</div>
   
                     <!-- Use if destination page contains page header image -->
                     <div class="tt-pn-image">
-                      <img src="assets/img/page-header/ph-1.jpg" alt="image">
+                      <img src="assets/img/maria_quynhon.jpg" alt="image">
                     </div>
                   </div>
                   <!-- End page nav -->
